--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -61,5 +61,6 @@
   "realEstate": "不動産",
   "specializedFields": "特殊分野",
   "prNewswire": "PR Newswire",
+  "englishNews": "English",
   "readAiSummary": "AI要約を読む"
 }
